Cody fixed the sliding dropdown in collapsed mode. Now theres a problem with the text color of Community in collapsed mode.

--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -44,6 +44,9 @@ body {
           a {
             background-color: #222222;
           }
+          ul.dropdown-menu {
+            display: none;
+          }
         }
       
         li {
